# ReFramed

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  Readme.txt  Statistics Plugin License.txt
application/: CMakeLists.txt
application/cmake/templates/: config.hpp.in
application/data/motion/: 1_Specific.json  2_General.json  3_English.json
application/forms/: ActiveGameSessionView.ui  ActiveSessionView.ui  ConnectView.ui  DataSetFilterWidget_Date.ui  DataSetFilterWidget_Game.ui  DataSetFilterWidget_Matchup.ui  DataSetFilterWidget_Player.ui  DataSetFilterWidget_PlayerCount.ui  DataSetFilterWidget_Stage.ui  ExportReplayPackDialog.ui  ImportReplayPackDialog.ui  MainWindow.ui  MetaDataEditWidget_Game.ui  MetadataEditWidget_Game.ui  MotionLabelsEditor.ui  PropagateLabelsDialog.ui  ReplayEditorDialog.ui  ReplayGroupView.ui  SavedGameSessionGroupView.ui  SessionView.ui  TrainingModeView.ui  VideoAssociatorDialog.ui
application/include/application/: Util.hpp
application/res/: reframed.qrc  res.qrc  windows.rc
application/src/: Util.cpp  main.cpp
application/src/models/: ActiveGameSessionManager.cpp  ActiveSessionManager.cpp  AutoAssociateVideosTask.cpp  CategoryModel.cpp  Config.cpp  ConfigAccessor.cpp  DataSetBackgroundLoader.cpp  FighterIcon.cpp  MetaDataEditModel.cpp  MetadataEditModel.cpp  MotionLabelsManager.cpp  MotionLabelsTableModel.cpp  PlayerDetails.cpp  PluginManager.cpp  Protocol.cpp  ProtocolCommunicateTask.cpp  ProtocolConnectTask.cpp  ProtocolTask.cpp  ProtocolTaskSSB64.cpp  ReplayGroup.cpp  ReplayListModel.cpp  ReplayListSortFilterModel.cpp  ReplayManager.cpp  ReplayMetadataCache.cpp  RunningGameSessionManager.cpp  SavedGameSessionGroup.cpp  SavedGameSessionManager.cpp  TrainingModeModel.cpp  UserMotionLabelsManager.cpp
application/src/views/: ActiveGameSessionView.cpp  ActiveSessionView.cpp  AnalysisView.cpp  CategoryTabsView.cpp  CategoryView.cpp  ConnectView.cpp  DamageTimePlot.cpp  DataSetFilterView.cpp  DataSetFilterWidget.cpp  DataSetFilterWidget_Date.cpp  DataSetFilterWidget_Game.cpp  DataSetFilterWidget_Matchup.cpp  DataSetFilterWidget_Player.cpp  DataSetFilterWidget_PlayerCount.cpp  DataSetFilterWidget_Stage.cpp  ExportReplayPackDialog.cpp  ImportReplayPackDialog.cpp  MainWindow.cpp  MotionLabelsEditor.cpp  MotionLabelsTableView.cpp  PathManagerDialog.cpp  PluginDockView.cpp  PropagateLabelsDialog.cpp  ReplayEditorDialog.cpp  ReplayGroupListView.cpp  ReplayGroupView.cpp  ReplayListView.cpp  ReplayListWidget.cpp  ReplayManagerView.cpp  ReplayViewer.cpp  RunningGameSessionView.cpp  SavedGameSessionGroupView.cpp  SavedGameSessionListWidget.cpp  SessionDataView.cpp  SessionView.cpp  TrainingModeView.cpp  UserLabelsEditor.cpp  UserMotionLabelsEditor.cpp  VideoAssociatorDialog.cpp  VisualizerView.cpp  (+1 more)
application/src/widgets/: CollapsibleSplitter.cpp  ConnectionStatusWidget.cpp  IconLabel.cpp  MetaDataEditWidget.cpp  MetaDataEditWidget_AutoAssociateVideo.cpp  MetaDataEditWidget_Commentators.cpp  MetaDataEditWidget_Event.cpp  MetaDataEditWidget_Game.cpp  MetaDataEditWidget_Players.cpp  MetaDataEditWidget_Tournament.cpp  MetadataEditWidget.cpp  MetadataEditWidget_AutoAssociateVideo.cpp  MetadataEditWidget_Commentators.cpp  MetadataEditWidget_Event.cpp  MetadataEditWidget_Game.cpp  MetadataEditWidget_Tournament.cpp  ProgressDialog.cpp  ReplaySearchBox.cpp
application/templates/: config.hpp.in
doc/gen-readme/: CMakeLists.txt  README.txt.in
doc/user-manual/: CMakeLists.txt  user-manual.tex
doc/user-manual/preamble/: packages.tex  title.tex
doc/user-manual/title/: titlepage.tex
frontend/application/: CMakeLists.txt
frontend/application/forms/: ActiveRecordingView.ui  AnalysisInputView.ui  DataSetFilterView.ui  DataSetFilterWidget_Date.ui  DataSetFilterWidget_Game.ui  DataSetFilterWidget_Matchup.ui  DataSetFilterWidget_Player.ui  MainWindow.ui  RecordingGroupView.ui  RecordingView.ui  RunningGameSessionView.ui  SavedGameSessionDataView.ui  SavedGameSessionView.ui  SessionDataView.ui  SessionView.ui  TrainingModeView.ui
frontend/application/src/: Util.cpp  main.cpp
frontend/tests/: CMakeLists.txt
frontend/tests/src/: test_DataSet.cpp  test_HashMap.cpp  test_Reference.cpp  test_SmallString.cpp  test_SmallVector.cpp  test_Vector.cpp  test_reference.cpp
frontend/uh/: CMakeLists.txt
frontend/uh/forms/: ActiveRecordingView.ui  ConnectView.ui  MainWindow.ui  RecordingDataView.ui  RecordingGroupView.ui  RecordingView.ui
frontend/uh/src/: ActiveRecording.cpp  AnalyzerPlugin.cpp  DataPoint.cpp  DataSet.cpp  DataSetFilter.cpp  DataSetFilterChain.cpp  DataSetFilter_Date.cpp  DataSetFilter_Game.cpp  DataSetFilter_Matchup.cpp  DataSetFilter_Player.cpp  DataSetPlayer.cpp  (+34 more)
frontend/uhplot/: CMakeLists.txt
plugins/: CMakeLists.txt
plugins/internal/: CMakeLists.txt
rfcommon/: CMakeLists.txt
rfcommon/src/: AnalysisResult.cpp  AnalyzerPlugin.cpp  BracketType.cpp  Costume.cpp  DataPoint.cpp  DataSet.cpp  DataSetFilter.cpp  DataSetFilterChain.cpp  DataSetFilter_Date.cpp  DataSetFilter_Game.cpp  DataSetFilter_Matchup.cpp  DataSetFilter_Player.cpp  DataSetFilter_PlayerCount.cpp  DataSetFilter_Stage.cpp  DecisionGraph.cpp  DeltaTime.cpp  Deserializer.cpp  EnumStrings.cpp  EventType.cpp  FighterFlags.cpp  FighterFrame.cpp  FighterHitStatus.cpp  FighterID.cpp  FighterIDMapping.cpp  FighterMotion.cpp  FighterState.cpp  FighterStatus.cpp  FighterStatusMapping.cpp  FighterStocks.cpp  FrameData.cpp  FrameIndex.cpp  FrameNumber.cpp  FramesLeft.cpp  GameMetaData.cpp  GameMetadata.cpp  GameNumber.cpp  GameSession.cpp  Hash40Strings.cpp  HashMap.cpp  HitStatusMapping.cpp  (+59 more)
rfplot/: CMakeLists.txt
rfplot/src/: AutoScaler.cpp  ColorPalette.cpp  DeltaPlotPicker.cpp  MousePlotPickerMachine.cpp  Panner.cpp  RealtimePlot.cpp  RectangleZoomer.cpp  Zoomer.cpp
tests/: CMakeLists.txt
tests/data/: hash40_1.csv  hash40_2.csv
tests/src/: main.cpp  test_Deque.cpp  test_HashMap.cpp  test_MotionLabels.cpp  test_Queue.cpp  test_Reference.cpp  test_ReplayFileParts.cpp  test_SmallString.cpp  test_SmallVector.cpp  test_String.cpp  test_Vector.cpp
updater/: CMakeLists.txt
(+916 files in other folders)
